--- a/Report/Conclusion.Rmd
+++ b/Report/Conclusion.Rmd
@@ -11,7 +11,8 @@ First of all, regarding violent crime, we found out that there was approximately
 
 However, the percentage of White killed each year by the police (44%) is roughly equal to the percentage they represent for the violent crime. On the opposite, the percentage of Black people killed by the police (25%) is clearly lower than to the percentage they represent for the violent crime. Despite being more likely to do violent crime, Black people seem to be less killed based on the percentage of violent crime they are perpetrating. Nevertheless, Black and White are not equal concerning the circumstances when the police kill them. The most important disparity is that Black have 30% more chance to get killed if they are unarmed compared to White people. In addition, they have 20% more chance to get shot if they are fleeing the crime scene while white people have twice more chance to get killed if they are drunk, under drugs, or have mental illness. There is 2 reasons to explain this: either Black people are more violent or there is a racial bias in the police in the United States. Anyway, Black people getting shot seems to be interpreted as more threatening than White people. To counter this effect, a course could be delivered to police station to realize there is a bias and try to eliminate it.
 
-The most disturbing part was the fact that the percentage of officers charged of a crime for Black people was higher than for White people. We think there is more pressure from media or Black movement on the judge to charge an officer in the case the victim is Black. However, it could also be that Black killings are usually less legitimate than White killings, which would make more sense since our data go from 2013. Finally, we observed that there are 168 people since 2013 who have been killed for no reason (unarmed, not fleeing, not under drugs or alcohol, no mental illness, etc…)
+The most disturbing part was the fact that the percentage of officers charged of a crime for Black people was higher than for White people. We think there is more pressure from media or Black movement on the judge to charge an officer in the case the victim is Black. However, it could also be that Black killings are usually less legitimate than White killings, which would make more sense since our data start from 2013. Finally, we observed that there are 168 people since 2013 who have been killed for no reason (unarmed, not fleeing, not under drugs or alcohol, no mental illness, etc…)
+
 In our analysis we observed that men were responsible of more than 80% of crime, while women represented approximately 16%. However, 95% of killed people were men, meaning there is even a disparity between gender. This could be explained by factors such as : the fact that women were in general less tempted to flee or to be armed, but also the fact that, and without research, in our society male are more prone to violence. Moreover, it is taught to every children that “a man shouldn’t hit a woman”, making the man the “strong” one and the woman the one to defend. In consequence, no matter the circumstance, for a lot of people it would be harder to shoot or kill a woman.
 
 In conclusion, there is indeed a disparity between Black and White people, but it is not that simple. Black people are more killed than White people for sure, but they also do more violent crime. We observed that some bias exists for groups concerning the conditions they got shoot by the police. Maybe other variables could explain this difference between Black and White killings.
