--- a/Report/Analysis.Rmd
+++ b/Report/Analysis.Rmd
@@ -430,6 +430,6 @@ The 4 plots indicate our multilinear regression is not a good fit at all.
 
 Despite being the important question of our research, we are unable with these data to construct a good model. This teach us at least the disparity between black and white is way more complex to explain than with only few variables. In order to build a better model, quadratic model would work better but there is a risk to overfit the data and it become harder to interpret the model specially with cubic model or higher.  
 
-The first model we tried was with all the ovservation but is was not a good match at all. Removing the outliers as showed in the paper slightly improved the model but not significatively. The goal was to find a variable that could explain this disparitie in order to influence it in the real word to lowered the disparity rate. With this model, we are not able to do it. However, the previous model and the correlation table gave us some clues; the best way to lowered the disparities between black and white is to lowered the crime rate for black people and to understand what make democrat states less likely to shoot offenders. It might not lower the disparities (as it is not proved by the model) but it will at least lower the number of black people getting shot every year. 
+The first model we tried was with all the ovservations but is was not a good match at all. Removing the outliers as showed in the paper slightly improved the model but not significatively. The goal was to find a variable that could explain this disparity in order to influence it in the real world to lower the disparity rate. With this model, we were not able to do it. However, the previous model and the correlation table gave us some clues; the best way to lower the disparities between black and white is to lowered the crime rate for black people and to understand what makes democrat states less likely to shoot offenders. It might not lower the disparities (as it is not proved by the model) but it will at least lower the number of black people getting shot every year. 
 
 
